--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
                 <h2>Sapato 1</h2>
                 <p>R$ 100,00</p>
                 <button>Comprar</button>
+                <section id="detalhes-do-sapato">
+            <p>Descrição do sapato...</p>
+            <form id="formulario-de-compra">
+                <label for="quantidade">Quantidade:</label>
+                <input type="number" id="quantidade" name="quantidade">
+                <button type="submit">Finalizar Compra</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Loja de Sapatos</p>
+    </footer>
+
+    <script src="scripts.js"></script>
             </div>
         </section>
     </main>
