--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venda de Sapatos</title>
+    <title>Sapatos Femininos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Loja de Sapatos</h1>
+        <h1>Loja de Sapatos Femininos</h1>
     </header>
     
     <main>
